--- a/site/package.json
+++ b/site/package.json
@@ -7,6 +7,7 @@
     "color": "^3.1.0",
     "emotion": "^9.0.0",
     "emotion-server": "^9.0.0",
+    "emotion-theming": "^9.2.6",
     "gatsby": "^1.9.149",
     "gatsby-link": "^1.6.34",
     "gatsby-plugin-emotion": "^1.1.13",
