Add color coral

--- a/config/design-tokens/color.yml
+++ b/config/design-tokens/color.yml
@@ -6,6 +6,8 @@ props: &COLORS
     value: '#fff'
   BLACK:
     value: '#000'
+  CORAL:
+    value: '#f07a7a'
   PINK000:
     value: '#fdecf1'
   PINK100:
