--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kalo/ui",
-  "version": "4.0.8",
+  "version": "5.0.0-0",
   "description": "A library of React components",
   "repository": {
     "type": "git",
