--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "generate:tokens": "node scripts/tokens.js",
     "generate:icons": "node scripts/icons.js",
     "version": "npm run build",
-    "start-styleguide": "concurrently \"gulp watch\" \"cd site && gatsby develop --p 5000\""
+    "start-styleguide": "concurrently \"gulp watch\" \"cd site && gatsby develop --p 5000\"",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "lint-staged": {
     "*.js": [
@@ -31,6 +33,12 @@
   "license": "ISC",
   "devDependencies": {
     "@kalo/eslint-config": "6.0.0",
+    "@storybook/addon-actions": "^5.1.3",
+    "@storybook/addon-knobs": "^5.1.3",
+    "@storybook/addon-links": "^5.1.3",
+    "@storybook/addon-notes": "^5.1.3",
+    "@storybook/addons": "^5.1.3",
+    "@storybook/react": "^5.1.3",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "7.2.3",
