--- a/package.json
+++ b/package.json
@@ -46,8 +46,9 @@
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "classnames": "2.2.5",
-    "css-loader": "0.28.0",
     "concurrently": "^4.1.0",
+    "css-loader": "0.28.0",
+    "cssnano": "^3.10.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-15": "^1.3.0",
     "enzyme-to-json": "^3.3.5",
@@ -63,7 +64,7 @@
     "gulp": "^4.0.0",
     "gulp-babel": "^7.0.1",
     "gulp-concat": "^2.6.1",
-    "gulp-postcss": "^7.0.0",
+    "gulp-postcss": "^7.0.1",
     "husky": "0.13.3",
     "identity-obj-proxy": "^3.0.0",
     "inline-style-prefixer": "^5.1.0",
@@ -72,11 +73,7 @@
     "lodash": "^4.17.11",
     "np": "^3.1.0",
     "polished": "^2.3.3",
-    "postcss-cli": "3.2.0",
-    "postcss-css-variables": "0.7.0",
-    "postcss-cssnext": "^3.0.2",
-    "postcss-import": "9.1.0",
-    "postcss-loader": "3.0.0",
+    "postcss-preset-env": "^6.6.0",
     "prettier": "1.16.3",
     "prop-types": "^15.5.10",
     "qs": "5.2.1",
@@ -147,6 +144,5 @@
       "!src/design-tokens/**/*",
       "!src/icons/**/*"
     ]
-  },
-  "dependencies": {}
+  }
 }
